--- a/banner1style.css
+++ b/banner1style.css
@@ -60,6 +60,8 @@ body{
     position: relative;
     -webkit-mask-image: url(img/mask1.svg);
     -webkit-mask-repeat: no-repeat;
+    mask-image: url(img/mask1.svg);
+    mask-repeat: no-repeat;
 }
 
 @keyframes mask {
